﻿***
*** Revisión: 2.0.0.0 | Marzo 2023
*** Servicio de Consulta de CFDI (Versión 1.4)
***
*********************************************************************************************************
Revisiones:
05/04/2023: creación de clase ResponseBuilder para crear la respuesta del servicio.
11/04/2023
- se aumenta el tiempo de espera para la respuesta a 10 minutos para evitar error en la consulta
- 11/09/2023: cambio de espacio de nombres Jaeger.SAT.CFDI.Consulta