@@ -41,3 +41,7 @@ src/bin/Debug/Jaeger.SAT.CFDI.Consulta.dll
 src/bin/Debug/Jaeger.SAT.CFDI.Consulta.pdb
 src/bin/Debug/Jaeger.SAT.CFDI.Consulta.dll
 src/bin/Debug/Jaeger.SAT.CFDI.Consulta.pdb
+src/obj/Debug/DesignTimeResolveAssemblyReferences.cache
+src/obj/Debug/TempPE/Properties.Resources.Designer.cs.dll
+src/bin/Debug/Jaeger.SAT.CFDI.Consulta.dll
+src/bin/Debug/Jaeger.SAT.CFDI.Consulta.pdb
