@@ -1,0 +1,7 @@
+﻿using System.CodeDom.Compiler;
+using System.ServiceModel;
+
+namespace Jaeger.SAT.CFDI.API.Consulta {
+    [GeneratedCodeAttribute("System.ServiceModel", "4.0.0.0")]
+    internal interface IConsultaCFDIServiceChannel : IConsultaCFDIService, IClientChannel { }
+}
