@@ -1,8 +1,0 @@
-﻿using System.CodeDom.Compiler;
-using System.ServiceModel;
-
-namespace Jaeger.SAT.CFDI.Consulta.Interfaces {
-    [GeneratedCodeAttribute("System.ServiceModel", "4.0.0.0")]
-    internal interface IConsultaCFDIServiceChannel : IConsultaCFDIService, IClientChannel {
-    }
-}
