@@ -1,5 +1,5 @@
 ﻿using System.Threading.Tasks;
-using Jaeger.SAT.CFDI.Consulta.Entities;
+using Jaeger.SAT.CFDI.API.Consulta;
 
 namespace Jaeger.SAT.CFDI.Consulta.Interfaces {
     public interface IStatus {
