@@ -5,7 +5,7 @@ using System;
 namespace Jaeger.SAT.CFDI.Consulta {
     internal class Log {
         public static void Escribir(string Texto, string stackTrace) {
-            string logfileName = $"jaeger_sat_ValidaRFC_{DateTime.Now:dd_MM_yyyy}.txt";
+            string logfileName = $"jaeger_sat_consulta_{DateTime.Now:dd_MM_yyyy}.txt";
             string logfile = Path.Combine(AppDomain.CurrentDomain.BaseDirectory, logfileName);
             StringBuilder stringBuilder = new StringBuilder();
             stringBuilder.AppendLine(string.Concat(DateTime.Now.ToString("dd/MM/yyyy HH:mm:ss"), " : ", Texto));
